[project]
name = "lopi999-nodes"
description = "Utility nodes for some randomness in your workflows, like random latent sizes. A few modifications to a few existing nodes, includes nodes for sampler and model parameters. Also includes two schedulers that can be used with any KSampler node."
version = "1.0.6.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/LaVie024/comfyui-lopi999-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lopi999"
DisplayName = "comfyui-lopi999-nodes"
Icon = ""
