[project]
name = "lopi999-nodes"
description = "Utility nodes for some randomness in your workflows, like random latent sizes. A few modifications to a few existing nodes, a node for model parameters, a few image manipulation nodes. Also includes two schedulers and four samplers that can be used with any KSampler node."
version = "2.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/LaVie024/comfyui-lopi999-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lopi999"
DisplayName = "comfyui-lopi999-nodes"
Icon = ""
